--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,11 @@
   </head>
   <body>
     <div class="wall"></div>
-
+    <button id="refresh">refresh</button>
     <div class="outer-wrapper">
       <div class="wrapper">
-        <img id="ball_1" src="./images/red-ball.png" alt="" />
         <div class="line-1">
           <svg
-            width="1200"
-            height="193"
             viewBox="0 0 1200 193"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
@@ -27,6 +24,7 @@
             />
           </svg>
         </div>
+        <img id="ball_1" src="./images/red-ball.png" alt="" />
       </div>
     </div>
 
