--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h1 class="text-4xl text-blue-800 mt-[100px]">My Webpack + Tailwind App</h1>
     <div class="wall"></div>
     <button id="refresh">refresh</button>
     <div class="outer-wrapper">
